# swe_prod_recorder

./: .gitignore  LICENSE  README.md  models.py  pyproject.toml  requirements.txt  schemas.py
observers/: google_auth.py  screen.py
src/swe_prod_recorder/: __init__.py  cli.py  db_utils.py  gum.py  models.py  schemas.py
src/swe_prod_recorder/auth/: __init__.py  google_drive.py
src/swe_prod_recorder/observers/: __init__.py  google_auth.py  observer.py  screen.py  window.py
src/swe_prod_recorder/observers/window/: __init__.py  window_linux.py  window_osx.py
src/swe_prod_recorder/observers/window/pyxsys/: __init__.py  colours.py  wmctrl.py  xwininfo.py
src/swe_prod_recorder/observers/window/pyxsys/wm/: territory.py  window.py
src/swe_prod_recorder/observers/window/pyxsys/xw/: tree.py
