[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "swe-prod-recorder"
version = "0.1.0"
description = "A screen activity recorder for software engineer productivity research"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Jennifer Wang", email = "jennjwang@users.noreply.github.com"}
]
dependencies = [
  # Core dependencies from gum
  "SQLAlchemy>=2.0.0",
  "aiosqlite",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "greenlet",
  # Screen capture and monitoring
  "pillow",
  "mss",
  "pynput",
  "shapely",
  # Search and analysis
  "scikit-learn",
  "numpy",
  # Optional: macOS-specific dependencies
  "pyobjc-core; sys_platform == 'darwin'",
  "pyobjc-framework-Quartz; sys_platform == 'darwin'",
  "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
  # Optional: Linux-specific dependencies (will go here)
]

[project.optional-dependencies]
gdrive = [
  # Optional: Google Drive integration
  "PyDrive",
  "PyYAML",
]

[project.scripts]
swe-prod-recorder = "swe_prod_recorder.cli:main"

[project.urls]
Homepage = "https://github.com/jennjwang/swe_prod_recorder"
Repository = "https://github.com/jennjwang/swe_prod_recorder"
