[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "swe-prod-recorder"
version = "0.1.0"
description = "A screen activity recorder for software engineer productivity research"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Jennifer Wang", email = "jennjwang@users.noreply.github.com"}
]
dependencies = [
  # Core dependencies from gum
  "SQLAlchemy>=2.0.0",
  "aiosqlite",
  "pydantic>=2.0.0",
  "greenlet",
  # Screen capture and monitoring
  "pillow",
  "mss",
  "pynput",
  "shapely",
  # macOS-specific dependencies
  "pyobjc-core; sys_platform == 'darwin'",
  "pyobjc-framework-Quartz; sys_platform == 'darwin'",
  "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
  # Linux-specific dependencies
  "PyQt5>=5.15.0; sys_platform == 'linux'",
]

[project.optional-dependencies]
gdrive = [
  # Google Drive integration
  "PyDrive",
  "PyYAML",
  "python-dotenv",  # For .env file support in auto-generating client_secrets.json
]

[project.scripts]
swe-prod-recorder = "swe_prod_recorder.cli:main"

[project.urls]
Homepage = "https://github.com/jennjwang/swe_prod_recorder"
Repository = "https://github.com/jennjwang/swe_prod_recorder"
